# ovn-bgp-agent

./: .coveragerc  .gitignore  .gitreview  .pre-commit-config.yaml  .stestr.conf  CONTRIBUTING.rst  HACKING.rst  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
devstack/: local.conf.sample  plugin.sh  settings
devstack/lib/: ovn-bgp-agent
doc/images/src/: evpn-flow-l3vpn.drawio
doc/source/: bgp_supportability_matrix.rst  conf.py  index.rst
doc/source/contributor/: agent_deployment.rst  bgp_advertising.rst  bgp_mode_design.rst  bgp_mode_stretched_l2_design.rst  bgp_supportability_matrix.rst  bgp_traffic_redirection.rst  evpn_advertising.rst  evpn_mode_design.rst  index.rst
doc/source/contributor/drivers/: bgp_mode_design.rst  bgp_mode_stretched_l2_design.rst  evpn_mode_design.rst  index.rst  nb_bgp_mode_design.rst  ovn_bgp_mode_design.rst
doc/source/examples/: index.rst  nb_evpn_vrf.rst
etc/frr_with_bfd/: frr.conf
etc/oslo-config-generator/: bgp-agent.conf
ovn_bgp_agent/: __init__.py  agent.py  config.py  constants.py  exceptions.py
ovn_bgp_agent/cmd/: agent.py
ovn_bgp_agent/drivers/: driver_api.py
ovn_bgp_agent/drivers/openstack/: nb_exceptions.py  nb_ovn_bgp_driver.py  ovn_bgp_driver.py  ovn_evpn_driver.py  ovn_stretched_l2_bgp_driver.py
ovn_bgp_agent/drivers/openstack/utils/: bgp.py  common.py  driver_utils.py  evpn.py  frr.py  loadbalancer.py  nat.py  ovn.py  ovs.py  port.py  router.py  wire.py
ovn_bgp_agent/drivers/openstack/watchers/: base_watcher.py  bgp_watcher.py  evpn_watcher.py  nb_bgp_watcher.py
ovn_bgp_agent/privileged/: __init__.py  linux_net.py  ovs_vsctl.py  vtysh.py
ovn_bgp_agent/tests/: base.py  test_ovn_bgp_agent.py  utils.py
ovn_bgp_agent/tests/functional/: base.py  fixtures.py
ovn_bgp_agent/tests/functional/drivers/openstack/utils/: test_ovn.py
ovn_bgp_agent/tests/functional/drivers/openstack/watchers/: test_nb_bgp_watcher.py
ovn_bgp_agent/tests/functional/privileged/: test_linux_net.py
ovn_bgp_agent/tests/functional/utils/: test_linux_net.py
ovn_bgp_agent/tests/unit/: fakes.py  test_agent.py
ovn_bgp_agent/tests/unit/cmd/: test_agent.py
ovn_bgp_agent/tests/unit/drivers/openstack/: test_nb_ovn_bgp_driver.py  test_ovn_bgp_driver.py  test_ovn_evpn_driver.py  test_ovn_stretched_l2_bgp_driver.py
ovn_bgp_agent/tests/unit/drivers/openstack/utils/: test_bgp.py  test_common.py  test_driver_utils.py  test_evpn.py  test_frr.py  test_loadbalancer.py  test_nat.py  test_ovn.py  test_ovs.py  test_port.py  test_router.py  test_wire.py
ovn_bgp_agent/tests/unit/drivers/openstack/watchers/: test_base_watcher.py  test_bgp_watcher.py  test_evpn_watcher.py  test_nb_bgp_watcher.py
ovn_bgp_agent/tests/unit/privileged/: test_linux_net.py  test_ovs_vsctl.py  test_vtysh.py
ovn_bgp_agent/tests/unit/utils/: test_helpers.py  test_linux_net.py
ovn_bgp_agent/utils/: common.py  helpers.py  linux_net.py
playbooks/: configure_bgp_networking.yaml
releasenotes/notes/: bump-min-pyver-to-38-6cb5bf75990aa8e2.yaml  enable_arp_ndp_for_vlans-6c306601aba68cb4.yaml  nb_driver-cc7098183fcedb0a.yaml  skip_vrf_delete-fcc8ac95db4fde21.yaml
releasenotes/source/: conf.py  index.rst
roles/leaf/templates/: frr.conf.j2
roles/spine/templates/: frr.conf.j2
tools/: setup-ovs.sh
zuul.d/: project.yaml  tempest-multinode.yaml  tempest-singlenode.yaml
