[metadata]
name = ovn-bgp-agent
summary = The OVN BGP Agent allows to expose VMs/Containers/Networks through BGP on OVN
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://www.openstack.org/
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    ovn_bgp_agent
data_files =
    etc/ovn-bgp-agent =
        etc/ovn-bgp-agent/rootwrap.conf
    etc/ovn-bgp-agent/rootwrap.d = etc/ovn-bgp-agent/rootwrap.d/*

[entry_points]
console_scripts =
    ovn-bgp-agent = ovn_bgp_agent.cmd.agent:start
    ovn-bgp-agent-rootwrap = oslo_rootwrap.cmd:main
    ovn-bgp-agent-rootwrap-daemon = oslo_rootwrap.cmd:daemon

ovn_bgp_agent.drivers =
    ovn_bgp_driver = ovn_bgp_agent.drivers.openstack.ovn_bgp_driver:OVNBGPDriver
    nb_ovn_bgp_driver = ovn_bgp_agent.drivers.openstack.nb_ovn_bgp_driver:NBOVNBGPDriver
    ovn_evpn_driver = ovn_bgp_agent.drivers.openstack.ovn_evpn_driver:OVNEVPNDriver
    ovn_stretched_l2_bgp_driver = ovn_bgp_agent.drivers.openstack.ovn_stretched_l2_bgp_driver:OVNBGPStretchedL2Driver

oslo.config.opts =
    ovnbgpagent = ovn_bgp_agent.config:list_opts
